--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "dcat/laravel-admin": "~2.0",
-    "monolog/monolog": "1.0.0"
+    "dcat/laravel-admin": "~2.0"
   },
   "autoload": {
     "psr-4": {
